log
Fri 29 Mar 2024 09:41:04 PM UTC: 
 tests:  0|6
total_score: 0/70
217f712
Fri 29 Mar 2024 10:32:41 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |    list->size=0;
      |        ^~
Compilation failed
e96167b
Fri 29 Mar 2024 10:35:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
413c517
Fri 29 Mar 2024 10:37:59 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:41: error: ‘Node’ has no member named ‘key’
   43 |   if(list->current) return list->current->key;
      |                                         ^~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1a9003
Fri 29 Mar 2024 10:38:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7bfb739
Fri 29 Mar 2024 10:40:30 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c465490
Fri 29 Mar 2024 10:42:11 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
8b77099
Fri 29 Mar 2024 10:44:31 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   49 |   if (list->current !=NULL)
      |   ^~
list.c:51:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   51 |     return list->current->data;
      |     ^~~~~~
list.c:52:3: error: ‘else’ without a previous ‘if’
   52 |   else return NULL;
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d48a4d
Fri 29 Mar 2024 10:45:00 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
eff46e0
Fri 29 Mar 2024 10:45:30 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6b60bac
Fri 29 Mar 2024 10:47:34 PM UTC: 
 list.c | 9 ---------
 1 file changed, 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b996a42
Fri 29 Mar 2024 10:47:44 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
d55d9f3
Fri 29 Mar 2024 10:48:39 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6d8e2d0
Fri 29 Mar 2024 10:49:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
024bc1b
Fri 29 Mar 2024 10:49:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
1896767
Fri 29 Mar 2024 10:49:56 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
4016d4e
Fri 29 Mar 2024 10:51:21 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2b1276c
Fri 29 Mar 2024 10:53:45 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
89daee7
Fri 29 Mar 2024 10:55:05 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
8d529b3
Fri 29 Mar 2024 10:58:11 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
bca3322
Fri 29 Mar 2024 10:58:28 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
e8feb33
Fri 29 Mar 2024 10:59:13 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
58d8182
Fri 29 Mar 2024 11:00:41 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
132515c
Fri 29 Mar 2024 11:02:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
505856c
Fri 29 Mar 2024 11:02:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c853b55
Fri 29 Mar 2024 11:02:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
23486f4
Fri 29 Mar 2024 11:03:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fbfd88b
Fri 29 Mar 2024 11:05:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
ca637c0
Sat 30 Mar 2024 01:24:12 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
728fab9
Sat 30 Mar 2024 01:24:51 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
9152eba
Sat 30 Mar 2024 01:25:54 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
dd66640
Sat 30 Mar 2024 01:33:06 AM UTC: 
 list.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 55/70
105881c
Sat 30 Mar 2024 01:34:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
5e0cbc4
Sat 30 Mar 2024 01:36:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
82d0269
Sat 30 Mar 2024 01:38:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
456c2c3
Sat 30 Mar 2024 01:39:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
43a11fb
Sat 30 Mar 2024 01:44:52 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
764e88b
Sat 30 Mar 2024 01:47:28 AM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
bbe0d09
Sat 30 Mar 2024 01:47:48 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e04e941
Sat 30 Mar 2024 01:48:10 AM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  11|1
total_score: 55/70
0366aea
Sat 30 Mar 2024 01:53:29 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
39db63a
Sat 30 Mar 2024 01:57:20 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
a331e10
Sat 30 Mar 2024 02:17:52 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
7002fb4
Sat 30 Mar 2024 02:18:42 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
a13aaea
Sat 30 Mar 2024 02:34:35 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|0
total_score: 70/70
9d7a63e
Sat 30 Mar 2024 02:46:03 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
f7d879d
